# hestia

./: .gitignore  Cargo.toml  hestia.toml.example  jane.toml.example  opensearch.xml  opensearch.xml.example
migrations/1/: down.sql  up.sql
migrations/2/: down.sql  up.sql
migrations/3/: up.sql
migrations/4/: up.sql
migrations/5/: up.sql
src/: macros.rs  main.rs  templates.rs  types.rs
src/db/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/routes/: finance.rs  inventory.rs  mod.rs  reminders.rs  settings.rs  util.rs
templates/: 404.html  head.html  home.html  internal_error.html  login.html  settings.html  signup.html  sqlite_error.html
templates/finance/: account.html  home.html
templates/inventory/: home.html
